LFHCDESK-11: Treatment - IV fluids - update Updating form to v0.4.6 Changes to be committed: 	modified:   treatment.html

--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.5">
+<htmlform formUuid="3faa978f-8c89-4f8e-b29f-17fd11099ecf" formName="Treatment Plan/Order" formEncounterType="feacdb57-4388-4b39-8840-2ff063bfab34" formVersion="0.4.6">
 
 
 
@@ -246,7 +246,7 @@
 					<div id="{n}-toggleContainer" style="display:none;" >
 						<obsgroup groupingConceptId="LFHC:1055">
 							<p>
-								<obs id="{n}-order" conceptId="LFHC:1054"/>
+								<obs id="{n}-order" conceptId="LFHC:1054" answerConceptIds="LFHC:1205,CIEL:80804,LFHC:1206,CIEL:78617,LFHC:1207,CIEL:161922"/>
 							</p>
 							<p>
 								<obs conceptId="CIEL:162745" labelText="Rate of IV fluid per hour: " showUnits="true"/>   
