--- a/omod/src/main/webapp/resources/htmlforms/wound.html
+++ b/omod/src/main/webapp/resources/htmlforms/wound.html
@@ -1,4 +1,17 @@
-<htmlform formUuid="52c43d9d-c3b6-4fda-8f6b-3590034e7c42" formName="Wound Details" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.4">
+<htmlform formUuid="52c43d9d-c3b6-4fda-8f6b-3590034e7c42" formName="Wound Details" formEncounterType="75a97fa9-4b04-4968-8f5b-041e5d0a3dae" formVersion="0.4.2">
+
+<ifMode mode="VIEW">
+	<script type="text/javascript" id="properViewMode">
+
+		// JavaScript for VIEW mode
+
+		if(jQuery){
+			jQuery(document).ready(function(){
+				properViewMode("52c43d9d-c3b6-4fda-8f6b-3590034e7c42");
+			});
+		}
+	</script>
+</ifMode>
 
 
 <div class="hidden" id="who-when-where">
