--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -1,45 +1,12 @@
-<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4.1">
+<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4.2">
+
+
+<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
 
 <script type="text/javascript">
-	if(jQuery){
 		jQuery(document).ready(function(){
-			
-			jQuery('#10-addEntry').remove();
-			for (var i=1 ; i &lt; 10 ; i++) {
-
-				jQuery("#"+i+"01-removeEntry").remove();
-				jQuery("#"+i+"01-toggleContainer").show();
-			}
-			jQuery('#11-removeEntry').remove();
-			jQuery('#20-addEntry').remove();
-			jQuery('#11-toggleContainer').show();
-
+			toggleContainers();
 		});
-
-
-		jQuery(document).ready(function(){
-
-			jQuery('i.addEntry').click(function(){
-				var correctedAddButtonId = parseFloat(this.id) + 1;
-
-				var contentAddId = "#" + correctedAddButtonId + "-toggleContainer";
-				jQuery(contentAddId).toggle(true);
-				jQuery('#' + this.id).toggle(false); jQuery('#' + parseFloat(this.id) + '-removeEntry').toggle(false);
-				return false;});
-		});
-
-		jQuery(document).ready(function(){
-			jQuery('i.removeEntry').click(function(){
-				var correctedRemoveButtonId = parseFloat(this.id) - 1;
-				var contentAddId = "#" + parseFloat(this.id) + "-toggleContainer";
-				jQuery(contentAddId).toggle(false);
-				jQuery( ':input:not(:button)', contentAddId).val([]);
-				jQuery('#' + correctedRemoveButtonId + '-addEntry').toggle(true); jQuery('#' + correctedRemoveButtonId + '-removeEntry').toggle(true);
-
-				return false;});
-
-		});
-	}
 </script>
 
 
@@ -208,7 +175,7 @@
 		<repeat>
 			<template>
 
-				<div id="{n}-toggleContainer" style="display:none;">
+				<div id="{n}-toggleContainer" templateBlockId="discharge-diag" class="toggleContainer" style="display:none;">
 					<obsgroup groupingConceptId="CIEL:159947">
 						<table class="tg">
 							<tbody>
@@ -218,7 +185,7 @@
 									</td>
 									<td>
 										<p>
-											<obs conceptId="CIEL:159946"/>
+											<obs id="{n}" conceptId="CIEL:159946"/>
 										</p>
 									</td>
 								</tr>
@@ -245,8 +212,8 @@
 								</tr>
 								<tr>
 									<td colspan="2" style="text-align:right;">
-										<i id="{n}-addEntry" class="addEntry icon-">&#xf055; Add</i>
-										<i id="{n}-removeEntry" class="removeEntry icon-">   &#xf056; Remove</i>
+										<i class="addEntry icon-">&#xf055; Add</i>
+										<i class="removeEntry icon-">   &#xf056; Remove</i>
 									</td>
 								</tr>
 							</tbody>
