--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -1,14 +1,14 @@
-<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4.2">
+<htmlform formUuid="cdc13a25-fe9e-43a5-85dd-7e2f31e8c860" formName="Doctor Discharge" formEncounterType="181820aa-88c9-479b-9077-af92f5364329" formVersion="0.4.3">
 
+<ifMode mode="VIEW" include="false">
+	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
 
-<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
-
-<script type="text/javascript">
+	<script type="text/javascript">
 		jQuery(document).ready(function(){
 			toggleContainers();
 		});
-</script>
-
+	</script>
+</ifMode>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
