--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -1,14 +1,15 @@
-<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.4.2">
+<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.4.3">
 
-<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
+<ifMode mode="VIEW" include="false">
+	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
 
-<script type="text/javascript">
-	jQuery(document).ready(function(){
-		toggleContainers();
-	});
+	<script type="text/javascript">
+		jQuery(document).ready(function(){
+			toggleContainers();
+		});
 
-</script>
-
+	</script>
+</ifMode>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
