--- a/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
@@ -1,5 +1,14 @@
 <htmlform formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.5">
 
+<ifMode mode="VIEW">
+	<script type="text/javascript" id="properViewMode">
+
+		// JavaScript for VIEW mode
+		jQuery(document).ready(function(){
+			properViewMode("d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97");
+		});
+	</script>
+</ifMode>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
