LFHCFORMS-82: Handle VIEW mode for Doctor History form Adding the "questionLabel" class

--- a/omod/src/main/webapp/resources/htmlforms/history.html
+++ b/omod/src/main/webapp/resources/htmlforms/history.html
@@ -255,7 +255,7 @@
 			</span>
 		</ifMode>
 		<p>
-			<lookup expression="fn.getConcept('CIEL:162633').name" />
+			<span class="questionLabel"><lookup expression="fn.getConcept('CIEL:162633').name" /></span>
 			<obs conceptId="162633"/>
 		</p>
 	</fieldset>
